src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.navbarSpace{
  width: "80%";
}


.tileStyle{
  width: 15rem;
  height: 15rem;
  background-color: #f8f1ff;
  box-shadow: #282c34;
  /* background-image: url(./resources/boy.png);
  background-image:; */
}

@keyframes spin {
  to {
    transform: rotate(360deg);
  }
}

.spin-icon {
  animation: spin 1s infinite linear;
}

.fileUploaderBtn{
  border-radius: 1rem;
  background-color: white;
  color: Black;
  width: 15rem
}
.fileUploaderBtn::file-selector-button{
  border-radius: 1rem;
  border: none;
  background-color: blueviolet;
  color: white
}

.scroll-container {
  height: 440px; /* set the height of the container */
  width: 100%; /* set the width of the container */
  overflow-y: scroll; /* enable vertical scrolling */
}

